--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,17 @@
     --light: #F1F3FA;
     --dark: #1C2035;
 }
+body {
+    margin: 0;
+    font-family: "Montserrat",sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: white;
+    background-color: blueviolet;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 
 .back-to-top {
     position: fixed;
@@ -310,6 +321,7 @@
     top: 0;
     left: 0;
     text-align: center;
+    color: black;
     background: #FFFFFF;
     box-shadow: 0 0 45px rgba(0, 0, 0, .06);
     transition: .5s;
@@ -348,80 +360,6 @@
 
 .service-item:hover .service-btn {
     bottom: -1.5rem;
-}
-
-
-/*** Project ***/
-.project-item {
-    position: relative;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .07);
-}
-
-.project-item .project-overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(0, 0, 0, .5);
-    opacity: 0;
-    padding-top: 60px;
-    transition: .5s;
-}
-
-.project-item:hover .project-overlay {
-    opacity: 1;
-    padding-top: 0;
-}
-
-.project-carousel .owl-nav {
-    position: absolute;
-    top: -100px;
-    right: 0;
-    display: flex;
-}
-
-.project-carousel .owl-nav .owl-prev,
-.project-carousel .owl-nav .owl-next {
-    margin-left: 15px;
-    width: 55px;
-    height: 55px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--secondary);
-    border-radius: 55px;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .15);
-    font-size: 25px;
-    transition: .5s;
-}
-
-.project-carousel .owl-nav .owl-prev:hover,
-.project-carousel .owl-nav .owl-next:hover {
-    background: var(--primary);
-    color: #FFFFFF;
-}
-
-@media (max-width: 768px) {
-    .project-carousel .owl-nav {
-        top: -70px;
-        right: auto;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-
-    .project-carousel .owl-nav .owl-prev,
-    .project-carousel .owl-nav .owl-next {
-        margin: 0 7px;
-        width: 45px;
-        height: 45px;
-        font-size: 20px;
-    }
 }
 
 
@@ -528,7 +466,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--secondary);
+    color: white;
     border-radius: 55px;
     box-shadow: 0 0 45px rgba(0, 0, 0, .15);
     font-size: 25px;
@@ -730,5 +668,20 @@ links a {
 }
 
   /** Social Icon CSS end **/
+
+  /** Booking and Quote Buttons **/
+  .btn-book-qoute {
+      display: flex;
+  }
+
+  .btn-right {
+      float: right;
+      margin: 40px;
+  }
+
+  .btn-left {
+      float: left;
+      margin: 40px;
+  }
 
   
