--- a/css/style.css
+++ b/css/style.css
@@ -684,4 +684,16 @@ links a {
       margin: 40px;
   }
 
+  /** Overlay Image Text **/
+  .overlay-text {
+    position: absolute;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    background-color: white; 
+    color: black; 
+    padding: 10px 20px; 
+    font-size: 20px; 
+    text-align: left;
+
   
